# emotionevaluator

./: Dockerfile  LICENSE  README.md  benchmark_report.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
output/: benchmark_report.md  output_aychang.csv  output_distilbert-base-uncased-finetuned-sst-2-english.csv  output_siebert.csv
src/: main.py  sentiment_prediction.py
src/api/: main.py
src/api/static/: index.html
tests/: data_exploration.py  emotion_evaluator_test.py  test_data_exploration.py  test_emotion_evaluator.py
