[project]
name = "emotionevaluator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"