[tool.poetry]
name = "emotionevaluator"
version = "0.1.0"
description = ""
authors = [ "Your Name you@example.com" ]
readme = "README.md"
packages = [{ include = "emotionevaluator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.3"
transformers = "^4.51.3"
numpy = "^2.2.5"
nltk = "^3.9.1"
torch = "^2.7.0"
tabulate = "^0.9.0"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
ruff = "^0.11.6"
pytest = "^8.3.5"
logging = "^0.4.9.6"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.3"
fastui = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"